@@ -1,3 +1,7 @@
+= master
+
+* Cache compiled templates in development mode, until the template files are modified (jeremyevans)
+
 = 3.20.0 (2019-05-16)
 
 * Set Content-Length header to 0 for empty 205 responses (jeremyevans)
